# TrafficLogger

./: CMakeLists.txt  README.md  concepts.txt
src/: main.cpp
src/console/: console.cpp  console.h
src/session-manager/: configurations.cpp  configurations.h  session-manager.cpp  session-manager.h  session.cpp  session.h
test/: console.cpp  session.cpp  unit_tests.cpp
traffic_logger/: CMakeLists.txt  local.properties  main.cpp
traffic_logger/conveyor/: conveyer.h  simple-file-conveyer.cpp  simple-file-conveyer.h
traffic_logger/parser/: http_log_parser.h  simple_http_log_parser.cpp  simple_http_log_parser.h
traffic_logger/src/: main.cpp
traffic_logger/src/console/: console.cpp  console.h
traffic_logger/src/utils/: properties-loader.h  properties_loader.cpp
traffic_logger/test_data/: sample_0.txt
